Fix the problem of overscroll, weird sidebar on mobile, and the popup menu dropdown color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,7 @@
 html,
 body {
   height: 100%;
+  overscroll-behavior: none;
 }
 
 body {
